--- a/src/timestamps/audioBox.css
+++ b/src/timestamps/audioBox.css
@@ -5,21 +5,29 @@ body {
 }
 
 #drop_zone {
-  width: 100vw;
+  width: 100%;
   height: 15vh;
-  background: #c0c0c0;
   align-items: center;
+  background: #c0c0c0;
 }
 
 #waveform {
   text-align: center;
+  display: none;
+  width: 100%;
+}
+#dragHelpText-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
 }
 #dragHelpText {
-  position: absolute;
   color: black;
-  top: 7%;
-  left: 50%;
-  transform: translate(-50%, -7%);
+  text-align: center;
+  justify-content: center;
 }
 
 #seconds {
