--- a/src/render/render.css
+++ b/src/render/render.css
@@ -1,7 +1,6 @@
-/* form {
-  width: 50%;
-  color: white;
+#options {
+  margin: 1vw;
 }
-.file-input {
-  background-color: #c0c0c0;
-} */
+#advanced-dropdown {
+  display: none;
+}
