--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -56,7 +56,8 @@ html {
   left: 1vw;
 }
 
-.menu-buttons-flex-cont {
+.menu-buttons-flex-cont,
+.flex-cont {
   /* We first create a flex layout context */
   display: flex;
 
@@ -74,16 +75,4 @@ html {
   padding: 0;
   margin: 0;
   list-style: none;
-}
-
-.menu-button {
-  /* padding: 5px;
-  width: 200px;
-  height: 150px;
-  margin-top: 10px; */
-  /* line-height: 150px;
-  color: white;
-  font-weight: bold;
-  font-size: 3em;
-  text-align: center; */
 }
